update list of lab and question for combobox